# PRISM-Bench

./: .agentbeats  README.md  generator.py  pyproject.toml  test_assessment.py
.github/workflows/: test-and-publish.yml  test.yml
baseline_agent/: Dockerfile  Dockerfile.aware  Dockerfile.cot  agent.py  aware.py  cot.py
scenarios/: prism_bench_final_submission.json
src/: agent.py  evaluator.py  messenger.py
tests/: test_agent.py
